# tranqu-server

./: .readthedocs.yaml  CITATION.cff  Dockerfile.dev  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yaml
config/: config.yaml  logging.yaml
docs/: CONTRIBUTING.md  index.md
docs/developer_guidelines/: development_flow.md  setup.md
docs/usage/: getting_started.md  interface_specifications.md
spec/proto/: Makefile  buf.gen.yaml
spec/proto/tranqu_server/proto/v1/: tranqu.proto
src/tranqu_server/: observability.py
src/tranqu_server/proto/: service.py
src/tranqu_server/proto/v1/: tranqu_pb2.py  tranqu_pb2_grpc.py
tests/tranqu_server/proto/: sample_client.py  test_service.py
