[project]
name = "tranqu-server"
version = "0.1.1"
description = "Tranqu Server: A transpiler service application using Tranqu"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "oqtopus-team", email = "oqtopus-team@googlegroups.com" }]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.12"
dependencies = [
  "grpcio-reflection>=1.68.1",
  "grpcio>=1.68.1",
  "protobuf>=5.29.1",
  "python-json-logger>=3.2.1",
  "tranqu>=0.3.1",
]

[project.urls]
documentation = "https://tranqu-server.readthedocs.io/"
repository = "https://github.com/oqtopus-team/tranqu-server"

[tool.uv]
dev-dependencies = [
  "mkdocs-gen-files>=0.5.0",
  "mkdocs-glightbox>=0.4.0",
  "mkdocs-jupyter>=0.25.1",
  "mkdocs-literate-nav>=0.6.1",
  "mkdocs-macros-plugin>=1.3.7",
  "mkdocs-material>=9.5.47",
  "mkdocstrings[python]>=0.27.0",
  "mypy>=1.13.0",
  "pymdown-extensions>=10.12",
  "pytest>=8.3.4",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.2",
  "types-colorama>=0.4.15.20240311",
  "types-protobuf>=5.28.3.20241203",
  "types-pygments>=2.18.0.20240506",
  "types-pyyaml>=6.0.12.20240917",
  "uv>=0.5.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
preview = true
include = [
  "src/**/*.py",
  "tests/**/*.py",
]
exclude = [
  "src/**/v1/**/*.py", # Generated codes
]
lint.select = ["ALL"]
lint.ignore = [
  "COM812",
  "CPY001",
  "D100",
  "D104",
  "D107",
  "D203",
  "D213",
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN201",
  "ANN205",
  "ANN401",
  "CPY001",
  "D",
  "PLC1901",
  "PLR2004",
  "PLR6301",
  "S101",
]

[tool.mypy]
files = ["src", "tests"]
exclude = [
  "src/.*/v1/", # Generated codes
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
pythonpath = ["src"]
